Update 03. Dimensional Analysis by Covariance.md

--- a/notes/Intelligent-data-analysis/03. Dimensional Analysis by Covariance.md
+++ b/notes/Intelligent-data-analysis/03. Dimensional Analysis by Covariance.md
@@ -230,6 +230,7 @@ As previously discussed, **correlation analysis** focuses on summarizing the str
 
 ### 3.1 Dispersion 
 <img src="https://media.geeksforgeeks.org/wp-content/uploads/20230810105933/measure-of-depression.png" alt="Dispersion" width="400">  
+
 ### Dispersion ≡ Spread
 
 The concept of **dispersion** refers to how much a variable spreads around its mean or average. Dispersion measures the variability within a single variable, while covariance extends this to measure the relationship between two variables.
@@ -462,7 +463,7 @@ Q = [q₂ q₁] = [1  1]
 
 ### 5.2 PCA Steps
 
-###$ Step 1: Center the Data (Mean correct)
+#### Step 1: Center the Data (Mean correct)
 Center the dataset by subtracting the mean:
 ```text
 X' = X - μ
